# swagger_server/models/id_days_body.py
@@ -1,0 +1,66 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class IdDaysBody(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, days: int=None):  # noqa: E501
+        """IdDaysBody - a model defined in Swagger
+
+        :param days: The days of this IdDaysBody.  # noqa: E501
+        :type days: int
+        """
+        self.swagger_types = {
+            'days': int
+        }
+
+        self.attribute_map = {
+            'days': 'days'
+        }
+        self._days = days
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'IdDaysBody':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The id_days_body of this IdDaysBody.  # noqa: E501
+        :rtype: IdDaysBody
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def days(self) -> int:
+        """Gets the days of this IdDaysBody.
+
+        New number of days for the alert  # noqa: E501
+
+        :return: The days of this IdDaysBody.
+        :rtype: int
+        """
+        return self._days
+
+    @days.setter
+    def days(self, days: int):
+        """Sets the days of this IdDaysBody.
+
+        New number of days for the alert  # noqa: E501
+
+        :param days: The days of this IdDaysBody.
+        :type days: int
+        """
+        if days is None:
+            raise ValueError("Invalid value for `days`, must not be `None`")  # noqa: E501
+
+        self._days = days
